examples/datalog/18_advanced_patterns/17_bill_of_materials.dl
% Test: Bill of Materials (BOM) pattern
% Expected: Classic BOM recursive query works
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_bom
.kg use test_bom

% Parts structure: (part_id, component_id, quantity)
+component[(1, 2, 2), (1, 3, 1), (2, 4, 3), (3, 4, 1), (3, 5, 2)].

% Part names
+part_name[(1, "Assembly"), (2, "SubA"), (3, "SubB"), (4, "Bolt"), (5, "Nut")].

% Direct components
+all_parts(Part, Comp, Qty) :- component(Part, Comp, Qty).

% Transitive components
+all_parts(Part, Comp, Qty) :- component(Part, Mid, _), all_parts(Mid, Comp, Qty).

?- all_parts(Part, Comp, Qty).

% Count unique components per top-level part
unique_comps(Part, <COUNT:Comp>) :- all_parts(Part, Comp, _).

?- unique_comps(Part, Count).

.kg use default
.kg drop test_bom
